--- a/AfroditaNuvies/res/layout/activity_mostrar_coleccio.xml
+++ b/AfroditaNuvies/res/layout/activity_mostrar_coleccio.xml
@@ -1,16 +1,48 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MostrarColeccioActivity" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/imatgeColeccio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:src="@drawable/ic_launcher" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/descripcioColeccio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/botoTeixits"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:text="@string/botoMostrarTeixits" />
+
+        <Button
+            android:id="@+id/botoVestits"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button_background"
+            android:text="@string/botoMostrarVestits" />
+
+    </LinearLayout>
+
+</LinearLayout>
+
